--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Romantic in form and tone, classic guitars are a distinguished member of the string family. Rosewood, maranti, nato and spruce are used throughout the construction.</p>
       </div>
       <div class="btn">
-        <b>SELECT</b>
+        <b>Buy $149</b>
       </div>
     </div>
     <div class="card">
@@ -63,7 +63,7 @@
         <p>Created to be kind to your fingertips, it's comfortable slightly shorter scale length and slim neck makes strings easier to operate without compromising the quality of the instrument.</p>
       </div>
       <div class="btn">
-        <b>SELECT</b>
+        <b>Buy $199</b>
       </div>
     </div>
   </div>
