added internal links

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1><i>MyGuitar</i></h1>
     <nav id="nav-bar">
       <ul>
-        <li><a href="" class="nav-link">Features</a></li>
-        <li><a href="" class="nav-link">How it works</a></li>
-        <li><a href="" class="nav-link">Pricing</a></li>
+        <li><a href="#features" class="nav-link">Features</a></li>
+        <li><a href="#video-container" class="nav-link">How it works</a></li>
+        <li><a href="#prices" class="nav-link">Pricing</a></li>
       </ul>
     </nav>
   </header>
@@ -26,7 +26,7 @@
       <input id="submit" type="submit" value="Get Started" class="btn">
     </form>
   </div>
-  <div class="details-container">
+  <div id="features" class="details-container">
     <div>
       <h2>Premium Materials</h2>
       <p>These acoustic guitars are built to have great sound quality, high durability and increased ease of use for both beginners as well as professionals. The 41 inch Size helps to make the sound much more fuller and to sustain in the sound box. The Spruce Body allows for a high fidelity resonating hollow chamber and the rosewood fretboard makes is very durable with great sound carrying capabilities.</p>
@@ -40,10 +40,10 @@
       <p>We submit your guitar to a strict quality control before sending it to you. This is a scrupulous process, in which our experts take all the necessary time to review your guitar.</p>
     </div>
   </div>
-  <div class="video-container">
+  <div id="video-container" class="video-container">
     <iframe id="video" height="200" src="https://www.youtube-nocookie.com/embed/0l0cbazB1DI?rel=0&amp;controls=0&amp;showinfo=0"></iframe>
   </div>
-  <div class="guitar-prices">
+  <div id="prices" class="guitar-prices">
     <div class="card">
       <div class="header">
         <h2>Classical</h2>
